# OOP_lb

./: .gitignore  .gitmodules  CMakeLists.txt  Game_structure.txt  OOP.drawio  README.md  build.sh
settings/: keyboard.cfg
src/: ActorAtributes.cpp  ActorAtributes.hpp  ActorAttack.cpp  ActorAttack.hpp  ActorEquipment.cpp  ActorEquipment.hpp  ActorHand.hpp  ActorHealth.cpp  ActorHealth.hpp  ActorStats.cpp  Config.cpp  Config.hpp  Enemy.cpp  Enemy.hpp  EnemyBarracks.cpp  EnemyBarracks.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  FieldCell.cpp  FieldCell.hpp  Game.cpp  Game.hpp  GameField.cpp  GameField.hpp  IGameController.hpp  ISpell.hpp  Item.hpp  Makefile  Player.cpp  Player.hpp  Visualizer.cpp  Visualizer.hpp  main.cpp
src/ASCIIAssets/: FireballScrollAsset.hpp  FirestormScrollAsset.hpp  HealthPotionAsset.hpp  SummonScrollAsset.hpp  TrapScrollAsset.hpp  UpgradeScrollAsset.hpp
src/actor_utility/: ActorAttack.cpp  ActorAttack.hpp  ActorAttributes.cpp  ActorAttributes.hpp  ActorEquipment.cpp  ActorEquipment.hpp  ActorHand.cpp  ActorHand.hpp  ActorHealth.cpp  ActorHealth.hpp  ActorInventory.cpp  ActorInventory.hpp  ActorStats.cpp  ActorStats.hpp
src/core/: AudioPlayer.hpp  CellState.cpp  CellState.hpp  Config.cpp  Config.hpp  EntityManager.cpp  EntityManager.hpp  FieldCell.cpp  FieldCell.hpp  FileHandler.cpp  FileHandler.hpp  Game.cpp  Game.hpp  GameContext.hpp  GameField.cpp  GameField.hpp  IGameController.hpp  ISaveManager.hpp  InputController.cpp  InputController.hpp  SaveData.hpp  SaveManager.cpp  SaveManager.hpp  SavesManager.cpp  SavesManager.hpp  SavesTree.hpp  Visualizer.cpp  Visualizer.hpp  main.cpp
src/core/commands/: Command.hpp  ControlCommand.cpp  ControlCommand.hpp  PlayerActionCommand.cpp  PlayerActionCommand.hpp
src/core/states/: AttackEffect.cpp  AttackEffect.hpp  CoupreAnimate.cpp  CoupreAnimate.hpp  DecelerationEffect.cpp  DecelerationEffect.hpp  DecelerationState.cpp  DecelerationState.hpp  IState.hpp  TrapEffect.cpp  TrapEffect.hpp
src/core/visual/: FTXUIVisualizer.cpp  FTXUIVisualizer.hpp  IVisualizer.hpp  NCURSESVisualizer.c  NCURSESVisualizer.cpp  NCURSESVisualizer.hpp
src/entities/: Enemy.cpp  Enemy.hpp  EnemyBarracks.cpp  EnemyBarracks.hpp  EnemyTower.cpp  EnemyTower.hpp  Entity.hpp  Player.cpp  Player.hpp  SummonedUnit.cpp  SummonedUnit.hpp
src/items/: AreaDamageSpell.cpp  AreaDamageSpell.hpp  DirectDamageSpell.cpp  DirectDamageSpell.hpp  HealPotion.cpp  HealPotion.hpp  ISpell.hpp  Item.hpp  Potion.hpp  SummonSpell.cpp  SummonSpell.hpp  TrapSpell.cpp  TrapSpell.hpp  UpdateSpell.cpp  UpdateSpell.hpp  UpgradeSpell.cpp  UpgradeSpell.hpp
